force-app/main/default/objects/Activity/fields/Additional_Account_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_Notes__c</fullName>
    <label>Additional Account Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>