force-app/main/default/objects/Activity/fields/Additional_Features_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Features_Reviewed__c</fullName>
    <label>Additional Features Reviewed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Account Settings</fullName><label>Account Settings</label><default>false</default></value>
            <value><fullName>SmartRx Forms</fullName><label>SmartRx Forms</label><default>false</default></value>
            <value><fullName>Integrations</fullName><label>Integrations</label><default>false</default></value>
            <value><fullName>Refinement</fullName><label>Refinement</label><default>false</default></value>
            <value><fullName>IDB</fullName><label>IDB</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>