force-app/main/default/objects/Activity/fields/Addtional_Feature__c.field-meta.xml
<CustomField>
    <fullName>Addtional_Feature__c</fullName>
    <label>Additional Features Reviewed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Settings</fullName>
            </value>
            <value>
                <fullName>Course Check</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Exporting</fullName>
            </value>
            <value>
                <fullName>IDB</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Ordering</fullName>
            </value>
            <value>
                <fullName>Refinement</fullName>
            </value>
            <value>
                <fullName>SmartRx Forms</fullName>
            </value>
            <value>
                <fullName>Tx Planning Tools</fullName>
            </value>
            <value>
                <fullName>uAssist</fullName>
                <isActive>false</isActive>
                <label>uAssist</label>
            </value>
            <value>
                <fullName>uAssist Case Review</fullName>
                <isActive>false</isActive>
                <label>uAssist Case Review</label>
            </value>
            <value>
                <fullName>uAssist First Case</fullName>
                <isActive>false</isActive>
                <label>uAssist First Case</label>
            </value>
            <value>
                <fullName>uAssist Submission/Modification Request</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
            <value>
                <fullName>uSmile Order Placed</fullName>
                <isActive>false</isActive>
                <label>uSmile Order Placed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>