force-app/main/default/objects/Activity/fields/Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference__c</fullName>
    <label>Communication Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Carrier Pigeon</fullName>
            </value>
			<value>
                <fullName>Office phone</fullName>
            </value>
            <value>
                <fullName>Cell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>