force-app/main/default/objects/Activity/fields/EasyRx__c.field-meta.xml
<CustomField>
    <fullName>EasyRx__c</fullName>
    <label>EasyRx</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><label>Yes</label><default>false</default></value>
            <value><fullName>No</fullName><label>No</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>