force-app/main/default/objects/Activity/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re-Training</fullName>
            </value>
            <value>
                <fullName>Case review</fullName>
            </value>
            <value>
                <fullName>Schedule Initial Training</fullName>
            </value>
            <value>
                <fullName>Schedule Advanced Training</fullName>
            </value>
            <value>
                <fullName>Schedule RSM Visit</fullName>
            </value>
            <value>
                <fullName>Team Education Meeting</fullName>
            </value>
            <value>
                <fullName>Check-in</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
			<value>
                <fullName>14 day</fullName>
            </value>
            <value>
                <fullName>30 day</fullName>
            </value>
            <value>
                <fullName>60 day</fullName>
            </value>
			<value>
                <fullName>90 day</fullName>
            </value>
            <value>
                <fullName>Schedule VIP Preference Review</fullName>
            </value>
            <value>
                <fullName>Schedule VIP Onboarding/Training</fullName>
            </value>
            <value>
                <fullName>Schedule VIP Case Review</fullName>
            </value>
            <value>
                <fullName>Schedule Training</fullName>
            </value>
            <value>
                <fullName>Schedule New Feature Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>