force-app/main/default/objects/Activity/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <label>Pricing Tier</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>