force-app/main/default/objects/Activity/fields/Printer__c.field-meta.xml
<CustomField>
    <fullName>Printer__c</fullName>
    <label>Printer</label>
    <type>Text</type>
    <length>100</length>
</CustomField>