force-app/main/default/objects/Activity/fields/Scanner__c.field-meta.xml
<CustomField>
    <fullName>Scanner__c</fullName>
    <label>Scanner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Alliedstar</fullName><label>Alliedstar</label><default>false</default></value>
            <value><fullName>Medit</fullName><label>Medit</label><default>false</default></value>
            <value><fullName>3Shape</fullName><label>3Shape</label><default>false</default></value>
            <value><fullName>iTero</fullName><label>iTero</label><default>false</default></value>
            <value><fullName>Shining</fullName><label>Shining</label><default>false</default></value>
            <value><fullName>Other</fullName><label>Other</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>