force-app/main/default/objects/Activity/fields/Scheduling_Options__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Options__c</fullName>
    <label>Scheduling Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Schedule VIP Preference Review</fullName>
            </value>
            <value>
                <fullName>Schedule VIP Onboarding/Training</fullName>
            </value>
            <value>
                <fullName>Schedule VIP Case Review</fullName>
            </value>
            <value>
                <fullName>Schedule Training</fullName>
            </value>
            <value>
                <fullName>Schedule New Feature Training</fullName>
            </value>
            <value>
                <fullName>Schedule Case Review</fullName>
            </value>
            <value>
                <fullName>Schedule RSM Visit</fullName>
            </value>
            <value>
                <fullName>Team Educational Meeting</fullName>
            </value>
            <value>
                <fullName>Schedule Check In</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>