force-app/main/default/objects/Activity/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <label>Software Version</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud 1</fullName>
            </value>
            <value>
                <fullName>Cloud 1.1</fullName>
            </value>
            <value>
                <fullName>Cloud 1.2</fullName>
            </value>
            <value>
                <fullName>Cloud 1.3</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>10.1</fullName>
            </value>
            <value>
                <fullName>10.2</fullName>
            </value>
            <value>
                <fullName>9.1</fullName>
            </value>
            <value>
                <fullName>9.0</fullName>
            </value>
            <value>
                <fullName>8.1</fullName>
            </value>
            <value>
                <fullName>8.0</fullName>
            </value>
            <value>
                <fullName>7.3</fullName>
            </value>
            <value>
                <fullName>7.2</fullName>
            </value>
            <value>
                <fullName>7.1</fullName>
            </value>
            <value>
                <fullName>7.0</fullName>
            </value>
            <value>
                <fullName>6.0</fullName>
            </value>
            <value>
                <fullName>5.9</fullName>
            </value>
            <value>
                <fullName>5.8</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>uDesign 9.1</fullName>
            </value>
            <value>
                <fullName>Earlier version</fullName>
            </value>
            <value>
                <fullName>6.1</fullName>
                <isActive>false</isActive>
                <label>6.1</label>
            </value>
            <value>
                <fullName>6.2</fullName>
                <isActive>false</isActive>
                <label>6.2</label>
            </value>
            <value>
                <fullName>6.5</fullName>
                <isActive>false</isActive>
                <label>6.5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>