force-app/main/default/objects/Activity/fields/Software_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Software_Version_Number__c</fullName>
    <label>Software Version Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>