force-app/main/default/objects/Activity/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <label>Training Date</label>
    <type>Date</type>
</CustomField>