force-app/main/default/objects/Activity/fields/Training_Goals__c.field-meta.xml
<CustomField>
    <fullName>Training_Goals__c</fullName>
    <label>Training Goals &amp; Expectations</label>
    <type>TextArea</type>
</CustomField>