force-app/main/default/objects/Activity/fields/Training_Method__c.field-meta.xml
<CustomField>
    <fullName>Training_Method__c</fullName>
    <label>Training Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>