force-app/main/default/objects/Activity/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New Account Training</fullName><label>New Account Training</label><default>false</default></value>
            <value><fullName>Existing Account Training</fullName><label>Existing Account Training</label><default>false</default></value>
            <value><fullName>VIP Training</fullName><label>VIP Training</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>